# jetacker-communication

./: .gitignore  Challenge1FSM.xml  README.md  initialize.bash  obstacles.txt  pathfinding.py  robot_dashboard.ui  run_uav.bash  start.sh  tosend.txt  typerc  waypoints.csv  waypoints.txt
logs/: uav_telemetry_20260319_100506.csv
my_bag/: metadata.yaml  my_bag_0.db3
rosbags/bag_20251027_162325/: bag_20251027_162325_0.db3  metadata.yaml
rosbags/bag_20251027_170722/: bag_20251027_170722_0.db3  metadata.yaml
rosbags/bag_20251027_172057/: bag_20251027_172057_0.db3  metadata.yaml
rosbags/bag_20251027_174711/: bag_20251027_174711_0.db3  metadata.yaml
rosbags/bag_20251027_175334/: bag_20251027_175334_0.db3  metadata.yaml
rosbags/bag_20251027_183146/: bag_20251027_183146_0.db3  metadata.yaml
rosbags/bag_20251118_143445/: bag_20251118_143445_0.db3  metadata.yaml
rosbags/bag_20251201_084529/: bag_20251201_084529_0.db3  metadata.yaml
rosbags/bag_20260312_132059/: bag_20260312_132059_0.db3  metadata.yaml
rosbags/bag_20260312_132551/: bag_20260312_132551_0.db3  metadata.yaml
rosbags/bag_20260312_134602/: bag_20260312_134602_0.db3  metadata.yaml
rosbags/bag_20260324_180237/: metadata.yaml
rosbags/bag_20260324_180811/: metadata.yaml
src/robot_gazebo/: package.xml  setup.cfg  setup.py
src/robot_gazebo/config/: localization.yaml  nav2_controller_dwb.yaml  nav2_controller_teb.yaml  nav2_params.yaml  robot_config.yaml  slam.yaml
src/robot_gazebo/launch/: room_worlds.launch.py  ros_ign_bridge.launch.py  spawn_model.launch.py  spawn_objects.launch.py  spwan_model.launch.py  worlds.launch.py
src/robot_gazebo/launch/include/: localization.launch.py  navigation.launch.py  slam.launch.py
src/robot_gazebo/maps/: map_01.pgm  map_01.yaml
src/robot_gazebo/models/: bed.model  bookshelft.model  kai_standing.model  sofa.model  tea_table.model
src/robot_gazebo/models/bottles/: green_bottle.model  red_bottle.model
src/robot_gazebo/models/chair/: chair_0.model  chair_1.model  chair_2.model  chair_3.model
src/robot_gazebo/models/cupboard/: cupboard_0.model  cupboard_1.model
src/robot_gazebo/models/table/: dinning_table_0.model  dinning_table_1.model  dinning_table_2.model  dinning_table_3.model  kitchen_table.model
src/robot_gazebo/robot_gazebo/: cmd_vel_modifier.py  teleop_key_control.py
src/robot_gazebo/rviz/: nav_nav2.rviz  slam.rviz
src/robot_gazebo/urdf/: camera.gazebo.xacro  imu.gazebo.xacro  jetacker.gazebo.xacro  lidar.gazebo.xacro  robot.gazebo.xacro  wheel_base.urdf.xacro
src/robot_gazebo/worlds/: empty.sdf  robocup_home.sdf
src/telemetry_package/: package.xml  setup.cfg  setup.py
src/telemetry_package/telemetry_package/: bag_recorder.py  challenge_one_fsm.py  demo_publisher.py  demo_subscriber.py  finite_state_machine.py  fsm_subscribers.py  main_gui.py  pixhawk_publisher.py  record_topic.py  uav_subscribers.py  ugv_subscribers.py
src/third_party_ws/src/holonomic_sim/: CMakeLists.txt  package.xml
src/third_party_ws/src/holonomic_sim/config/: holonomic_test.rviz  holonomic_test.yaml  teleop.yaml
src/third_party_ws/src/holonomic_sim/include/holonomic_sim/: robot_vel.hpp  visibility_control.h
src/third_party_ws/src/holonomic_sim/launch/: holonomic_sim.launch.py
src/third_party_ws/src/holonomic_sim/models/HolonomicUrdf/: model.config  model.xacro
src/third_party_ws/src/holonomic_sim/models/field/: model.config  model.sdf
src/third_party_ws/src/holonomic_sim/models/worlds/: holonomic_test.sdf  model.config
src/third_party_ws/src/holonomic_sim/models/xacro/: common.xacro
src/third_party_ws/src/holonomic_sim/src/: ign_ros_node.cpp  robot_vel.cpp
src/third_party_ws/src/holonomic_sim/src/holonomic_plugin/: holonomic_plugin.cpp  holonomic_plugin.hpp
uav_package/: setup.cfg  setup.py
unused_py_files/: bag_recorder.py  kill_switch.py  record_topic.py
(+68 files in other folders)
