<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_gazebo</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ubuntu@todo.todo">ubuntu</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>gazebo_ros</depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
  <depend>rviz2</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros_ign_bridge</exec_depend>
  <exec_depend>ros_ign_gazebo</exec_depend>
  <exec_depend>ign_ros2_control</exec_depend>
  



  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
