<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>telemetry_package</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="prachi@todo.todo">prachi</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
    <depend>rclpy</depend>
    <depend>subprocess</depend>
    <depend>geometry_msgs.msg</depend>
    <depend>sys</depend>
    <depend>tty</depend>
    <depend>termios</depend>
    <depend>os</depend>
    <depend>time</depend>
    <depend>rosbag2_py</depend>
     <depend>signal</depend>
     <depend>pathlib</depend>
     <depend>numpy</depend>
     <depend>pyqtgraph</depend>
     <depend>signal</depend>
     <depend>datetime</depend>
     <depend>nav_msgs.msg</depend>
      <depend>geographic_msgs.msg</depend>
     <depend>sensor_msgs.msg</depend>
     <depend>PIL</depend>
     <depend>pymavlink</depend>
     <depend>math</depend>
<exec_depend>std_msgs</exec_depend>


  </export>
</package>
